--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,18 +6,18 @@
 .search_btn{
     padding: 7px;
     color: white;
-    background: #f67280;
-    border: 1px solid #f67280;
+    background: purple;
+    border: 1px solid purple;
 }
 .nav_btns_text{
     text-decoration: none;
 }
 .header_text{
-    color: #f67280; 
+    color: purple; 
 }
 .search_input{
     padding: 7px;
-    border: 1px solid #f67280;
+    border: 1px solid purple;
     width: 90%;
 }
 .nav_btns{
