--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@
 body{
     font-family: sans-serif;
 }
+.carousel-caption{
+    background-color: #00000082;
+    border-radius: 5px;
+}
+.carousel-control-next-icon,.carousel-control-prev-icon{
+    background-color: black;
+}
